@@ -1,4 +1,4 @@
-/*	$NetBSD: pciidevar.h,v 1.32 2005/12/24 20:27:42 perry Exp $	*/
+/*	$NetBSD: pciidevar.h,v 1.33 2006/03/06 18:35:24 bouyer Exp $	*/
 
 /*
  * Copyright (c) 1998 Christopher G. Demetriou.  All rights reserved.
@@ -108,7 +108,10 @@ struct pciide_softc {
 	/* for SiS */
 	u_int8_t sis_type;
 
-	/* For Silicon Image SATALink, Artisea SATA and Promise SATA */
+	/*
+	 * For Silicon Image SATALink, Serverworks SATA, Artisea SATA
+	 * and Promise SATA
+	 */
 	bus_space_tag_t sc_ba5_st;
 	bus_space_handle_t sc_ba5_sh;
 	int sc_ba5_en;
